--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,6 +37,5 @@ jobs:
       with:
         draft: false
         prerelease: false
-        release_name: v1.1.7
-        tag_name: v1.1.7
+        allowUpdates: true
 
