--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,3 +24,14 @@ jobs:
 
     - name: Test
       run: go test
+      
+    - name: release
+      uses: actions/create-release@v1
+      id: create_release
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        draft: false
+        prerelease: false
+        allowUpdates: true
+        release_name: v1.1.8
